[gd_scene load_steps=10 format=3 uid="uid://blv7lvtoda8wt"]

[ext_resource type="Texture2D" uid="uid://crfhutilbxk6l" path="res://assets/Menu/menuList.png" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://hqibn0ar1vc7" path="res://scripts/ui.gd" id="1_x4jx1"]
[ext_resource type="Script" uid="uid://dm1bena5cc7wf" path="res://scripts/health_bar.gd" id="4_gdt2y"]
[ext_resource type="Texture2D" uid="uid://cw06toe7cyw8n" path="res://assets/Menu/Pixel Heart full - Copy.png" id="4_wm3ai"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnkej"]
bg_color = Color(0.099985994, 0.09998601, 0.099985965, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm8aj"]
bg_color = Color(0.099985994, 0.09998601, 0.099985965, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtwp4"]
bg_color = Color(0.099985994, 0.09998601, 0.099985965, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wm3ai"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dubc"]
bg_color = Color(0.7397895, 2.0094587e-06, 5.7756904e-07, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UI" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_x4jx1")

[node name="Menu_Btn" type="Button" parent="."]
process_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_bottom = 58.0
grow_horizontal = 0
icon = ExtResource("1_nt7q6")

[node name="MenuOptions" type="Panel" parent="."]
process_mode = 3
offset_left = 134.0
offset_top = 95.0
offset_right = 1077.0
offset_bottom = 567.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOptions"]
process_mode = 3
layout_mode = 0
offset_left = 238.0
offset_top = 194.0
offset_right = 665.0
offset_bottom = 437.0
theme_override_constants/separation = 10

[node name="LevelsBtn" type="Button" parent="MenuOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dnkej")
text = "Levels"

[node name="MenuBtn" type="Button" parent="MenuOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_mm8aj")
text = "Main Menu"

[node name="ExitBtn" type="Button" parent="MenuOptions/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wtwp4")
text = "Exit"

[node name="RetryBtn" type="Button" parent="MenuOptions/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wtwp4")
text = "Retry"

[node name="Label" type="Label" parent="MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.5
offset_top = -141.0
offset_right = 145.5
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "GAME PAUSED"

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_right = 32.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Time: 60"
horizontal_alignment = 1

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = 2.0
offset_right = 29.0
offset_bottom = 27.0
size_flags_horizontal = 3
texture = ExtResource("4_wm3ai")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 35.0
offset_top = 8.0
offset_right = 177.0
offset_bottom = 18.0
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_wm3ai")
theme_override_styles/fill = SubResource("StyleBoxFlat_8dubc")
max_value = 50.0
value = 50.0
show_percentage = false
script = ExtResource("4_gdt2y")

[connection signal="pressed" from="Menu_Btn" to="." method="_on_menu_icon_pressed"]
[connection signal="pressed" from="MenuOptions/VBoxContainer/LevelsBtn" to="." method="_on_levels_btn_pressed"]
[connection signal="pressed" from="MenuOptions/VBoxContainer/MenuBtn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="MenuOptions/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="MenuOptions/VBoxContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
